Fixed transport route card labels. Fixed expanded layout of route details menu.

--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -11,6 +11,7 @@
 	Thx - Hardy
 
 -->
+    <string name="transfers_size">%1$d transfers</string>
     <string name="rendering_attr_surface_unpaved_name">Unpaved</string>
     <string name="rendering_attr_surface_sand_name">Sand</string>
     <string name="rendering_attr_surface_grass_name">Grass</string>
