--- a/OsmAnd/res/values-de/strings.xml
+++ b/OsmAnd/res/values-de/strings.xml
@@ -2406,7 +2406,7 @@ Abgedeckte Fläche: %1$s x %2$s</string>
     <string name="edit_name">Namen ändern</string>
     <string name="animate_my_location">Meine Position animieren</string>
     <string name="animate_my_location_desc">Animation beim Schwenken meiner Position während der Navigation aktivieren.</string>
-    <string name="route_is_too_long_v2">Bitte fügen Sie Zwischenziele hinzu, wenn innerhalb von 10 Minuten für diese lange Route kein Ergebnis gefunden wird.</string>
+    <string name="route_is_too_long_v2">Für lange Distanzen: Bitte fügen Sie Zwischenziele ein, wenn innerhalb von 10 Minuten kein Ergebnis gefunden wird.</string>
     <string name="save_poi_too_many_uppercase">Der Name enthält zu viele Großbuchstaben. Vorgang fortsetzen?</string>
     <string name="display_zoom_level">Darstellung ab Zoomstufe: %1$s</string>
     <string name="routing_attr_allow_private_name">Privatzugang erlauben</string>
