--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -11,6 +11,8 @@
 	Thx - Hardy
 
 -->
+    <string name="avoid_pt_types_descr">Select a public transport types you want to avoid during navigation:</string>
+    <string name="avoid_pt_types">Avoid transport types…</string>
     <string name="shared_string_walk">Walk</string>
     <string name="save_poi_value_exceed_length">Value of tag \"%s\" cannot exceed 255 chars. \nPlease edit it before continue.</string>
     <string name="save_poi_value_exceed_length_title">Length of \"%s\" value</string>
