--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -11,6 +11,7 @@
     Thx - Hardy
 
   -->
+  <string name="osmand_default_routing">OsmAnd routing</string>
   <string name="application_profiles_descr">Select the profiles to be visible in the app.</string>
   <string name="application_profiles">Application profiles</string>
   <string name="shared_string_degrees">Degrees</string>
