--- a/OsmAnd-telegram/res/values/strings.xml
+++ b/OsmAnd-telegram/res/values/strings.xml
@@ -1,5 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="proxy_key">Key</string>
+    <string name="proxy_password">Password</string>
+    <string name="proxy_username">Username</string>
+    <string name="proxy_credentials">Credentials</string>
+    <string name="proxy_port">Port</string>
+    <string name="proxy_server">Server</string>
+    <string name="shared_string_connection">Connection</string>
+    <string name="shared_string_enable">Enable</string>
+    <string name="proxy_type">Proxy type</string>
+    <string name="proxy_connected">Connected</string>
+    <string name="proxy_disconnected">Disconnected</string>
+    <string name="proxy_settings">Proxy Settings</string>
+    <string name="proxy">Proxy</string>
+    <string name="privacy">Privacy</string>
     <string name="direction">Direction</string>
     <string name="precision">Precision</string>
     <string name="altitude">Altitude</string>
