--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -11,6 +11,9 @@
 	Thx - Hardy
 
 -->
+    <string name="coordinates_copy_to_clipboard">Coordinates copy to clipboard</string>
+    <string name="searching_gps">Searching GPS</string>
+    <string name="coordinates_widget">Coordinates widget</string>
     <string name="files_moved">Moved %1$d files (%2$s).</string>
     <string name="files_copied">Copied %1$d files (%2$s).</string>
     <string name="files_failed">Failed to copy %1$d files (%2$s).</string>
