--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -11,6 +11,8 @@
 	Thx - Hardy
 
 -->
+    <string name="profile_type_descr_string">Type: %s</string>
+    <string name="profile_type_base_string">Base Profile</string>
     <string name="profile_alert_need_routing_type_title">Select Routing Type</string>
     <string name="profile_alert_need_routing_type_msg">You need to select Routing Type to create New Application Profile</string>
     <string name="profile_alert_need_profile_name_title">Enter Profile Name</string>
