--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -13,8 +13,8 @@
 -->
     <string name="profile_type_descr_string">Type: %s</string>
     <string name="profile_type_base_string">Base Profile</string>
-    <string name="profile_alert_need_routing_type_title">Select Routing Type</string>
-    <string name="profile_alert_need_routing_type_msg">You need to select Routing Type to create New Application Profile</string>
+    <string name="profile_alert_need_routing_type_title">Select navigation type</string>
+    <string name="profile_alert_need_routing_type_msg">You need to select Navigation type to create New Application Profile</string>
     <string name="profile_alert_need_profile_name_title">Enter Profile Name</string>
     <string name="profile_alert_need_profile_name_msg">Profile name shouldn\'t be empty!</string>
     <string name="profile_alert_duplicate_name_title">Duplicate Name</string>
@@ -25,7 +25,7 @@
     <string name="profile_alert_delete_title">Delete Profile</string>
     <string name="profile_alert_delete_msg">Are you sure you want to delete %s profile</string>
     <string name="select_base_profile_dialog_title">Select base profile</string>
-    <string name="select_base_profile_dialog_message">The new Application Profile should be based on one of the default App Profiles. Selected Profile defines basic settings: setup of Widgets, units of speed and distance. In string below Profile\'s name, you could learn which Navigation Profiles are suitable for each Application Profile.</string>
+    <string name="select_base_profile_dialog_message">Custom Application Profile should be based on one of the default App Profiles. Selected Profile defines basic settings: setup of Widgets, units of speed and distance. In string below Profile\'s name, you could learn which Navigation Profiles are suitable for each Application Profile.</string>
     <string name="select_nav_profile_dialog_title">Select navigation type</string>
     <string name="base_profile_descr_car">Car, Truck, Motorcycle</string>
     <string name="base_profile_descr_bicycle">MBT, Moped, Skiing, Horse</string>
@@ -3150,5 +3150,6 @@
     <string name="run_full_osmand_header">Launch OsmAnd?</string>
     <string name="routing_attr_avoid_sett_name">Avoid cobblestone and sett</string>
     <string name="routing_attr_avoid_sett_description">Avoid cobblestone and sett</string>
+  <string name="select_icon_profile_dialog_title">Select icon</string>
 
 </resources>
