--- a/OsmAnd-telegram/res/values-eu/strings.xml
+++ b/OsmAnd-telegram/res/values-eu/strings.xml
@@ -11,7 +11,6 @@
     <string name="disable_monitoring">Desgaitu kontrola</string>
     <string name="location_recording_enabled">Kokapen grabaketa gaituta</string>
     <string name="timeline_description">Gaitu kontrola zure kokapen guztiak historian gordetzeko.</string>
-    <string name="app_name_short_online">Online Aztarnaria</string>
     <string name="app_name_short">OsmAnd Aztarnaria</string>
     <string name="shared_string_telegram">Telegram</string>
     <string name="privacy_policy_use_telegram">Telegram (mezularitza aplikazioa) jendearekin konektatzeko eta komunikatzeko erabiltzen da.</string>
@@ -78,7 +77,7 @@
     <string name="shared_string_back">Atzera</string>
     <string name="start_location_sharing">Partekatu kokapena</string>
     <string name="show_on_map">Erakutsi mapan</string>
-    <string name="app_name">OsmAnd Telegram</string>
+    <string name="app_name">OsmAnd Online GPS Tracker</string>
     <string name="phone_number_title">Telefono zenbakia</string>
     <string name="phone_number_descr">Telefono zenbakia formatu internazionalean</string>
     <string name="shared_string_password">Pasahitza</string>
@@ -101,7 +100,7 @@
     <string name="shared_string_distance">Distantzia</string>
     <string name="share_location">Partekatu kokapena</string>
     <string name="sharing_location">Partekatzen kokapena</string>
-    <string name="process_service">OsmAnd Telegram zebitzua</string>
+    <string name="process_service">OsmAnd Tracker zebitzua</string>
     <string name="osmand_logo">OsmAnd logoa</string>
     <string name="install_osmand_dialog_message">OsmAnd doako edo ordainpeko bertsioa instalatu behar duzu lehenik</string>
     <string name="install_osmand">Instalatu OsmAnd</string>
