--- a/OsmAnd-telegram/res/values-hu/strings.xml
+++ b/OsmAnd-telegram/res/values-hu/strings.xml
@@ -49,7 +49,6 @@
     <string name="disable_monitoring">Figyelemmel kísérés letiltása</string>
     <string name="location_recording_enabled">Tartózkodási hely rögzítésének engedélyezve</string>
     <string name="timeline_description">A figyelemmel kísérés engedélyezése az előzményekben található összes tartózkodási hely mentéséhez.</string>
-    <string name="app_name_short_online">Online Tracker</string>
     <string name="app_name_short">OsmAnd Tracker</string>
     <string name="share_location_as_description">Ha egy Telegram-fiókhoz több eszközt szeretne csatlakoztatni, akkor tartózkodási helyének megosztásához egy másik eszközt kell használnia.</string>
     <string name="last_updated_location">Utoljára frissített tartózkodási hely:</string>
@@ -71,8 +70,8 @@
     <string name="add_device">Eszköz hozzáadása</string>
     <string name="share_location_as">Tartózkodási hely megosztása mint</string>
     <string name="live_now_description">Tartózkodási helyüket Önnel megosztó partnerek és csoportok.</string>
-    <string name="logout_from_osmand_telegram_descr">Biztosan kilép az OsmAnd Telegramból\? Így nem tudja megosztani másokkal tartózkodási helyét, és mások sem látják az Önét.</string>
-    <string name="logout_from_osmand_telegram">Kilép az OsmAnd Telegramból\?</string>
+    <string name="logout_from_osmand_telegram_descr">Biztosan kilép az OsmAnd Trackerból\? Így nem tudja megosztani másokkal tartózkodási helyét, és mások sem látják az Önét.</string>
+    <string name="logout_from_osmand_telegram">Kilép az OsmAnd Trackerból\?</string>
     <string name="shared_string_name">Név</string>
     <string name="by_distance">Távolság szerint</string>
     <string name="by_name">Név szerint</string>
@@ -122,7 +121,7 @@
     <string name="my_location_search_hint">Keresés: csoport vagy partner</string>
     <string name="start_location_sharing">Tartózkodási hely megosztása</string>
     <string name="show_on_map">Megjelenítés a térképen</string>
-    <string name="app_name">OsmAnd Telegram</string>
+    <string name="app_name">OsmAnd Online GPS Tracker</string>
     <string name="phone_number_title">Telefonszám</string>
     <string name="phone_number_descr">Telefonszám nemzetközi formában</string>
     <string name="shared_string_password">Jelszó</string>
@@ -143,7 +142,7 @@
     <string name="shared_string_distance">Távolság</string>
     <string name="share_location">Tartózkodási hely megosztása</string>
     <string name="sharing_location">Tartózkodási hely megosztása folyamatban</string>
-    <string name="process_service">OsmAnd Telegram szolgáltatás</string>
+    <string name="process_service">OsmAnd Tracker szolgáltatás</string>
     <string name="osmand_logo">OsmAnd logó</string>
     <string name="shared_string_welcome">Isten hozta</string>
     <string name="yard">yard</string>
@@ -180,7 +179,7 @@
     <string name="initializing">Indítás</string>
     <string name="searching_for_gps">Pozíció meghatározása…</string>
     <string name="connecting_to_the_internet">Kapcsolódás az internethez</string>
-    <string name="battery_optimization_description">Az OsmAnd Telegram esetében kapcsolja ki az akkumulátor optimalizálását, nehogy hirtelen kikapcsoljon, miközben a háttérben fut.</string>
+    <string name="battery_optimization_description">Az OsmAnd Tracker esetében kapcsolja ki az akkumulátor optimalizálását, nehogy hirtelen kikapcsoljon, miközben a háttérben fut.</string>
     <string name="sharing_in_background">Megosztás a háttérben</string>
     <string name="go_to_settings">Beállítások megnyitása</string>
     <string name="shared_string_later">Később</string>
@@ -196,7 +195,7 @@
     <string name="search_contacts_descr">Keresés az összes csoportban és kapcsolatban.</string>
     <string name="type_contact_or_group_name">Gépelje be a kapcsolat vagy a csoport nevét</string>
     <string name="shared_string_search">Keresés</string>
-    <string name="osmand_connect_desc">Válassza ki, melyik OsmAnd verziót használja a az OsmAnd Telegram a pozíciók megjelenítéséhez.</string>
+    <string name="osmand_connect_desc">Válassza ki, melyik OsmAnd verziót használja a az OsmAnd Tracker a pozíciók megjelenítéséhez.</string>
     <string name="osmand_connect">Kapcsolódás az OsmAndhoz</string>
     <string name="already_registered_in_telegram">Regisztrált Telegram fiók és telefonszám szükséges</string>
     <string name="do_not_have_telegram">Nincs Telegram fiókom</string>
@@ -209,7 +208,7 @@
     <string name="gps_not_available">A rendszerbeállításoknál kapcsolja be a „Tartózkodási helyet”</string>
     <string name="location_service_no_gps_available">Tartózkodási helyének megosztásához jelölje ki az egyik tartózkodásihely-szolgáltatót.</string>
     <string name="osmand_service">Háttérmód</string>
-    <string name="osmand_service_descr">Az OsmAnd Telegram a háttérben fut, kikapcsolt képernyővel.</string>
+    <string name="osmand_service_descr">Az OsmAnd Tracker a háttérben fut, kikapcsolt képernyővel.</string>
     <string name="install_osmand_dialog_message">Először telepítenie kell az OsmAnd ingyenes vagy fizetős verzióját</string>
     <string name="install_osmand">OsmAnd telepítése</string>
     <string name="show_users_on_map">Felhasználók megjelenítése a térképen</string>
