--- a/OsmAnd-telegram/res/values-pl/strings.xml
+++ b/OsmAnd-telegram/res/values-pl/strings.xml
@@ -167,7 +167,7 @@
     <string name="initializing">Wystartuj</string>
     <string name="searching_for_gps">Pozycjonowanie…</string>
     <string name="connecting_to_the_internet">Łączenie z internetem</string>
-    <string name="disconnect_from_telegram_desc">Aby anulować dostęp do udostępniania lokalizacji. Otwórz Telegram, przejdź do Ustawienia → Prywatność i bezpieczeństwo → Sesje i zakończ sesję OsmAnd Telegram.</string>
+    <string name="disconnect_from_telegram_desc">Aby anulować dostęp do udostępniania lokalizacji. Otwórz Telegram, przejdź do Ustawienia → Prywatność i bezpieczeństwo → Sesje i zakończ sesję OsmAnd Tracker.</string>
     <string name="stale_location">Nie porusza się</string>
     <string name="last_update_from_telegram">Ostatnia aktualizacja z Telegram</string>
     <string name="stop_sharing_all">Udostępnianie jest włączone (wyłącz)</string>
@@ -200,7 +200,6 @@
     <string name="disable_monitoring">Wyłącz monitorowanie</string>
     <string name="location_recording_enabled">Zapis położenia włączony</string>
     <string name="timeline_description">Włącz monitorowanie, by zapisać wszystkie lokalizacje w historii.</string>
-    <string name="app_name_short_online">Nadajnik online</string>
     <string name="app_name_short">Nadajnik OsmAnd</string>
     <string name="shared_string_telegram">Telegram</string>
     <string name="privacy_policy_use_telegram">Telegram (aplikacji do wysyłania wiadomości) jest używana do łączenia i komunikowania się z ludźmi.</string>
