--- a/OsmAnd-telegram/res/values-ru/strings.xml
+++ b/OsmAnd-telegram/res/values-ru/strings.xml
@@ -151,7 +151,6 @@
     <string name="show_gps_points">Показать точки GPS</string>
     <string name="shared_string_ok">ОК</string>
     <string name="disable_monitoring">Отключить мониторинг</string>
-    <string name="app_name_short_online">Online Tracker</string>
     <string name="app_name_short">OsmAnd Tracker</string>
     <string name="shared_string_telegram">Telegram</string>
     <string name="shared_string_accept">Принять</string>
@@ -183,11 +182,11 @@
     <string name="map_and_text">Карта и текст</string>
     <string name="stop_sharing_all">Совместное использование включено (выключено)</string>
     <string name="my_location_search_hint">Поиск: группа или контакт</string>
-    <string name="app_name">OsmAnd Telegram</string>
+    <string name="app_name">OsmAnd Online GPS Tracker</string>
     <string name="logging_out">Выход</string>
     <string name="closing">Закрытие</string>
     <string name="gps_network_not_enabled">Включить \"Местоположение\"\?</string>
-    <string name="process_service">Служба OsmAnd Telegram</string>
+    <string name="process_service">Служба OsmAnd Tracker</string>
     <string name="osmand_logo">Логотип OsmAnd</string>
     <string name="yard">ярд</string>
     <string name="foot">фут</string>
