--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -11,6 +11,9 @@
 	Thx - Hardy
 
 -->
+    <string name="shared_string_speed">Speed</string>
+    <string name="default_speed_dialog_title">Set default speed</string>
+    <string name="default_speed_dialog_msg">Used for calculations of expected arrival time during routing</string>
     <string name="profile_name_hint">Profile Name</string>
     <string name="nav_type_hint">Navigation Type</string>
     <string name="app_mode_taxi">Taxi</string>
