--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -12,6 +12,8 @@
 
 -->
     <string name="shared_string_speed">Speed</string>
+    <string name="default_speed_setting_title">Default speed</string>
+    <string name="default_speed_setting_descr">Change default speed settings</string>
     <string name="default_speed_dialog_title">Set default speed</string>
     <string name="default_speed_dialog_msg">Used for calculations of expected arrival time during routing</string>
     <string name="profile_name_hint">Profile Name</string>
@@ -3172,5 +3174,6 @@
     <string name="routing_attr_avoid_sett_name">Avoid cobblestone and sett</string>
     <string name="routing_attr_avoid_sett_description">Avoid cobblestone and sett</string>
     <string name="quick_action_need_to_add_item_to_list">You need to add at least one Item to list in Quick Action\' Settings</string>
+
 
 </resources>
